fix(edit): removed whitespace at the bottom of the space when scrolling

--- a/next-tavla/src/Admin/scenarios/TileSettings/components/TileSettingsWrapper/styles.module.css
+++ b/next-tavla/src/Admin/scenarios/TileSettings/components/TileSettingsWrapper/styles.module.css
@@ -15,4 +15,5 @@
 
 .content {
     overflow: auto;
+    position: relative;
 }
